# discord-bot

./: .gitignore  pyproject.toml
discord_bot/: __main__.py  db.py
discord_bot/cogs/: remindme.py  score.py
