[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["Matt Wetmore <wetmore.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = {extras = ["voice"], version = "^1.6.0"}
spotipy = "^2.16.1"
peewee = "^3.14.0"
parsedatetime = "^2.6"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
